added basic navbar layout

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,9 @@
 $background-color: #0a0b0a;
 $background-secondary-color: #111111;
 $text-color: #efe6d2;
+$default-gap: 16px;
+$default-border-radius: 15px;
+
 
 * {
   box-sizing: border-box;
