added navbar items

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Forum&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 $background-color: #0a0b0a;
 $background-secondary-color: #111111;
@@ -13,7 +14,7 @@ $default-border-radius: 15px;
   padding: 0;
 
   color: $text-color;
-  font-family: "Forum", sans-serif;
+  font-family: "Forum", cursive;
   font-weight: lighter;
 }
 
