--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -13,15 +13,16 @@
     padding: 10px;
     display: flex;
     align-items: center;
-    gap: $default-gap;
+    gap: $default-gap + 3px;
     
     background-color: $background-color;
     border-radius: 10px;
 }
 
-.navbar p{
+.navbar p {
     font-weight: 100;
     font-size: 27px;
+    cursor: pointer;
 }
 
 .menu-button {
@@ -32,6 +33,21 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
+}
+
+.nav-regular-button,
+.nav-primary-button {
+    font-family: "Montserrat", sans-serif;
+    font-size: 15px;
+    font-weight: 300;
+    cursor: pointer;;
+}
+
+.nav-primary-button {
+    box-shadow: 0 0 2px $text-color;
+    padding: 10px;
+    border-radius: 10px;
 }
 
 svg {
