added animations to navbar links

--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -9,19 +9,20 @@
 }
 
 .navbar {
-  padding: 10px;
+  padding: 3px 7.5px;
   display: flex;
   align-items: center;
-  gap: $default-gap + 3px;
+  gap: 5px;
 
   background-color: $background-color;
   border-radius: 10px;
 }
 
-.navbar p {
+.nav-header {
   font-weight: 100;
   font-size: 1.6rem;
   cursor: pointer;
+  padding: 10px;
 }
 
 .menu-button {
@@ -41,12 +42,32 @@
   font-size: 0.7rem;
   font-weight: 300;
   cursor: pointer;
+  padding: 12.5px 15px;
+  border-radius: 10px;
+}
+
+.nav-regular-button:hover {
+  box-shadow: 0 0 2px $text-color;
+  background-color: $background-secondary-color;
+  transition: 0.2s ease;
 }
 
 .nav-primary-button {
   box-shadow: 0 0 2px $text-color;
-  padding: 10px;
-  border-radius: 10px;
+}
+
+.nav-primary-button:hover {
+  background-color: #1a1a1a;
+  transition: 0.2s ease;
+}
+
+.regularbutton-animate-element {
+  transition: 0.3s ease;
+}
+
+.regularbutton-animate-element.regular-button-animating {
+  box-shadow: 0 0 2px $text-color;
+  background-color: $background-secondary-color;
 }
 
 svg {
