--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -59,18 +59,14 @@
 }
 
 .small-card {
+  position: relative;
   height: inherit;
+  cursor: pointer;
 }
 
 .card {
   border-radius: $default-border-radius;
-}
-
-.small-card {
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  cursor: pointer;
+  display: flex;
 }
 
 .brightness-animate-element {
@@ -82,14 +78,26 @@
   filter: brightness(100%);
 }
 
-.small-card:nth-child(1) {
-  background-image: url("https://framerusercontent.com/images/EKJJBnLQzSzsS1Sp8JrOMfZgqw.webp");
+.small-card img {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: absolute;
+
+  border-radius: inherit;
+  width: 100%;
+  height: 100%;
 }
 
-.small-card:nth-child(2) {
-  background-image: url("https://framerusercontent.com/images/slPotYXPFXAfEsa1a4GJhZIk.webp");
-}
-
-.small-card:nth-child(3) {
-  background-image: url("https://framerusercontent.com/images/InB1qO4eodYHQXKOVBszhLURHE.webp");
+.card-action-section {
+  z-index: 2;
+  position: absolute;
+  left: calc(100% - 210px);
+  top: calc(100% - 60px);
+  width: 200px;
+  height: 50px;
+  background-color: white;
+  border-radius: inherit;
+  background-color: $background-secondary-color;
+  justify-self: flex-end;
 }
