--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,12 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Forum&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 $background-color: #0a0b0a;
 $background-secondary-color: #111111;
 $text-color: #efe6d2;
 $default-gap: 16px;
 $default-border-radius: 15px;
-
 
 * {
   box-sizing: border-box;
@@ -19,7 +18,15 @@ $default-border-radius: 15px;
 }
 
 body {
-  padding: 25px;
   background-color: $background-color;
   height: 100vh;
+}
+
+.main-wrapper {
+  display: flex;
+  padding: 25px;
+  height: 100vh;
+
+  border-radius: $default-border-radius;
+  gap: $default-gap;
 }
